# accords-platform

./: Makefile.am  configure.ac  objectstorage_manifest.xsd  objectstorage_types.xsd
cocarrier/: osclient.c  swiftclient.c  swiftclient.h
comodel/: occirest.c
coobjectstorage/: Makefile.am  coobjectstorage.c  coobjectstorage.h
copabr/: cp.c  cpxsd.c
cops/: copsplacement.c
cords/: Makefile.am
corest/: restclient.c  restserver.c  ssltls.c
eziprocci/: eziclient.c
model/: objectstorage.xml  swift.xml
osocciprocci/: osocciclient.c
osprocci/: osprocci.c  proccios.c
pubocci/: cordslang.h
scripts/: Makefile.am  accords-config.in  accords.in
swiftprocci/: Makefile.am  procciswift.c  swiftprocci.c  swiftprocci.h
testswift/: Makefile.am  testswift.c
tools/strukt/: occirest.c
